www/style.css
body {
    background-color: #CCCCCC;
    margin: 0;
    padding: 0;
}

#tblcolumns {
    background-color: white;
    border-collapse: collapse;
    border: solid 1px black;
    width: 100%;
}

#main_content {
    margin: 10px;
}

#grouplist {
    vertical-align: top;
    width: 200px;
    border-right: solid black 1px;
    padding: 10px;
}

#grouplistheader {
    font-size: 16pt;
    font-weight: bold;
}

#groupcontents {
    vertical-align: top;
    padding: 10px;
}

#groupcontentsheader {
    font-size: 16pt;
    font-weight: bold;
    margin-bottom: 10px;
}

#postlisting {
    border: solid black 3px;
    padding: 0;
    height: 400px;
    overflow: auto;
    resize: vertical;
}

.post {
    border-bottom: 1px solid black;
    font-size: 10pt;
    cursor: pointer;
}

.post:hover {
    background-color: #CCCCCC;
}

.posttitle {
}

.posttable {
    width: 100%;
}

.titlecell {
    /* if this isn't good enough, we'll just set the width manually */
   /* box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box; */
}

.metadatacell {
}

.metadatatable {
    width: 100%;
}

.clear {
    clear: both;
}

.read {
    color: black;
}

.unread {
    background-color: #FFFFD0;
}

.hiddenposts {
    display: none;
    background-color: #F0F0F0;
}

.expander {
    font-family: monospace;
    width: 20px;
    text-align: center;
    cursor: crosshair;
    background: #CCCCCC;
}

.expander-dummy {
    font-family: monospace;
    width: 20px;
    text-align: center;
    background: #CCCCCC;
}

.selected {
    background-color: cyan !important;
}

#postview {
    display: none;
    margin-top: 20px;
    max-width: 800px;
}

#postcontents {
    border: solid black 1px;
    font-family: monospace;
    padding: 10px;
}

.quote {
    border-left: solid blue 1px;
    margin-left: 0px;
    padding-left: 10px;
    padding-top: 3px;
    margin-top: 3px;
    margin-bottom: 3px;
    padding-bottom: 3px;
}

#viewtitle {
    font-size: 12pt;
    font-weight: bold;
}

.newpostbutton {
    float: right;
}

#header {
    background-color: white;
    border: solid black 1px;
    padding: 10px;
    margin: 10px;
}

#noscript_banner {
    background-color: white;
    border: solid #FF0000 5px;
    margin: 0;
    padding: 10px;
}

.posteditbox {
    font-family: monospace;
}

#pager {
    text-align: right;
    font-size: 12pt;
}

#pager a {
    text-decoration: none;
}

#pager_first {
    margin-right: 10px;
}

#pager_prev {
    margin-right: 10px;
}

#pager_number {
    margin-right: 10px;
}

#flash {
    font-weight: bold;
    border: solid blue 2px;
    padding: 20px;
    margin: 20px;
}

